--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,7 +41,7 @@
 @import "print";
 
 /* ---- Ultra-soft academic typography (publications focused) ---- */
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Source+Serif+4:opsz,wght@8..60,400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=IBM+Plex+Serif:wght@400;500&display=swap");
 
 html {
   font-size: 15.5px; /* smaller overall */
