--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -35,4 +35,6 @@
 </script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
+<script data-goatcounter="https://jingbowan.goatcounter.com/count"
+        async src="https://gc.zgo.at/count.js"></script>
 <!-- end custom head snippets -->
