--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -37,4 +37,6 @@
 
 <script data-goatcounter="https://jingbowan.goatcounter.com/count"
         async src="https://gc.zgo.at/count.js"></script>
+
+<script src="{{ '/assets/js/publications.js' | relative_url }}" defer></script>
 <!-- end custom head snippets -->
