--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -231,3 +231,19 @@ hr {
 }
 
 .pub-abstract.is-open { display: block; }
+
+/* ===== Publication authors styling ===== */
+.pub-authors {
+  color: #2f6f8f;        /* muted academic blue */
+  font-weight: 500;
+}
+
+.pub-authors a {
+  color: #2f6f8f;
+  text-decoration: none;
+}
+
+.pub-authors a:hover {
+  color: #1f4e64;        /* slightly darker on hover */
+  text-decoration: underline;
+}
