--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,5 @@
+---
+---
 /* =========================================================
    Ultra-soft academic typography (Option A)
    Body: IBM Plex Serif
